# tfhebasics

./: .gitignore  README.md  errormessage
.artifacts/: 1.initial.graph.txt  2.after-fusing.graph.txt  3.after-fusing.graph.txt  4.after-fusing.graph.txt  5.after-fusing.graph.txt  6.after-fusing.graph.txt  7.final.graph.txt  mlir.txt  parameters.txt  requirements.txt  traceback.txt
tfhe_capi/: .gitignore  CMakeLists.txt  Cargo.toml  Cargotaada  README.Md  main.c
tfhe_capi/basics/: CMakeLists.txt
tfhe_concrete/: README.md  cnn.pth  cnn_CML_3bits_acc_MNIST.ipynb  cnn_QuantizationAwareTraining.ipynb  cnn_model.py  concrete_add_multi.ipynb  concrete_cnn.ipynb  concrete_cnn_mnist.ipynb  concrete_explore.ipynb  concrete_image_conv.ipynb  concrete_lmage_encrypt.ipynb  concrete_lookuptable.ipynb  concrete_ml_scikit_learn.ipynb  concrete_snn_new.ipynb  concrete_trail.py  one.ipynb  progressbar.ipynb  readme.md  simple_cnn.ipynb  simple_cnn_concrete.ipynb  simple_cnn_concrete_mnist.ipynb  simple_snn_concrete.ipynb
tfhe_concrete/.artifacts/: 1.initial.graph.txt  2.after-fusing.graph.txt  3.after-fusing.graph.txt  4.after-fusing.graph.txt  5.after-fusing.graph.txt  6.after-fusing.graph.txt  7.after-fusing.graph.txt  7.final.graph.txt  8.final.graph.txt  environment.txt  function.txt  mlir.txt  requirements.txt  traceback.txt
